tests/snapshot/error/source_locations/expression/binary/loose_not_equal.js
1 != ({ [Symbol.toPrimitive]() { throw new Error() } })