tests/snapshot/error/source_locations/expression/binary/loose_not_equal.exp
Error: 
  ┌ source_locations/expression/binary/loose_not_equal.js:1:40
  |
1 | 1 != ({ [Symbol.toPrimitive]() { throw new Error() } })
  |                                        ^
Stack trace:
  at <anonymous> (source_locations/expression/binary/loose_not_equal.js:1:40)
  at <global> (source_locations/expression/binary/loose_not_equal.js:1:3)